Update card title for JavaScript section to reflect contributors

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<p>Responsive layout and simple design.</p>
 				</article>
 				<article class="card" data-id="3">
-					<h4>JavaScript</h4>
+					<h4>Gyanesh and Ayush</h4>
 					<p>Interactivity: toggles and form handling.</p>
 				</article>
 			</div>
